# goroorog

./: .gitignore  Anchor.toml  CONFIG-BOSS.csv  CONFIG-PLAYER.csv  README.md  bots.json  package-lock.json  package.json  turbo.json
apps/gabana/: .dockerignore  Dockerfile  encore.app  gabana  package.json  railway.toml
apps/gabana/hello/: encore.service.ts  hello.ts
apps/gabana/src/: index.ts
apps/gabana/src/libs/: firebase.ts  utils.ts
apps/server/: package.json
apps/server/libs/: utils.ts
apps/watching/: README.md  index.ts  package.json  t.json  usdc_balance_history.csv
apps/web/: index.html  package.json  vite.config.ts
apps/web/public/: bana-transformed.glb  bana.glb  gor-transformed.glb  gor.glb
apps/web/public/models/: Icicle.glb  WizardTraining.glb  bit-apple-transformed.glb  bit-apple.glb  trash-bag-transformed.glb  trash-bag.glb
apps/web/src/: app.tsx  game.tsx  global.d.ts  main.tsx  types.ts
apps/web/src/components/: attack-fire.tsx  attack-ice.tsx  attack-void.tsx  bana.tsx  boss.tsx  control.tsx  (+35 more)
programs/goroorog/: Cargo.toml
programs/goroorog/src/: constants.rs  error.rs  errors.rs  lib.rs
programs/goroorog/src/instructions/: create_boss.rs  create_history.rs  create_player.rs  create_resource.rs  create_skill.rs  create_stat.rs  mod.rs  update_history.rs  update_resource.rs  update_stat.rs
programs/goroorog/src/states/: bosses.rs  history.rs  leaderboards.rs  mod.rs  players.rs  resources.rs  skills.rs  stats.rs
scripts/: create-boss.ts  create-player.ts  generate-bot.ts  goroorog.json  goroorog.ts
tests/: goroorog.ts
(+25 files in other folders)
